--- a/ormconfig.json
+++ b/ormconfig.json
@@ -2,9 +2,9 @@
   "type": "mysql",
   "host": "localhost",
   "port": 3306,
-  "username": "admin",
-  "password": "admin",
-  "database": "testzukk",
+  "username": "root",
+  "password": "root",
+  "database": "base",
   "entities": [
     "src/app/models/*.ts"
   ],
