--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.11",
     "@types/jsonwebtoken": "^8.5.1",
+    "@types/uuid": "^8.3.4",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
@@ -19,8 +20,9 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mysql2": "^2.2.5",
+    "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.32"
+    "typeorm": "^0.3.7",
+    "uuid": "^8.3.2"
   }
 }
